# advent-of-code

./: .gitignore  README.md
2022/: main.py
python/: Makefile  README.md  pyproject.toml
python/2020/dec1/1/: main.py
python/2020/dec10/1/: main.py
python/2020/dec10/2/: main.py  main2.py
python/2020/dec13/1/: main.py
python/2020/dec13/2/: main.py
python/2020/dec14/2/: main.py
python/2020/dec15/1/: main.py
python/2020/dec15/2/: main.py
python/2020/dec2/1/: main.py
python/2020/dec3/1/: main.py
python/2020/dec3/2/: main.py
python/2020/dec4/2/: main.py
python/2020/dec5/1/: main.py
python/2020/dec6/2/: main.py
python/2020/dec7/2/: main.py
python/2020/dec8/1/: main.py
python/2020/dec8/2/: main.py
python/2020/dec9/1/: main.py
python/2021/dec1/2/: counter.py
python/2021/dec10/2/: main.py
python/2021/dec11/2/: main.py
python/2021/dec13/2/: main.py
python/2021/dec14/1/: main.py
python/2021/dec14/2/: main.py
python/2021/dec15/2/: main.py
python/2021/dec16/2/: main.py
python/2021/dec17/1/: main.py
python/2021/dec18/: main.py  old.py
python/2021/dec3/1/: main.py
python/2021/dec3/2/: main.py
python/2021/dec4/1/: main.py
python/2021/dec4/2/: main.py
python/2021/dec5/1/: main.py
python/2021/dec5/2/: main.py
python/2021/dec9/2/: main.py
python/2022/01/: main.py
python/2022/02/: main.py
python/2022/03/: main.py
python/2022/06/: main.py
python/2022/10/: main.py
python/2022/15/: main.py  main2.py
python/2023/01/: main.py
python/2023/02/: main.py
python/2023/03/: main.py
python/2023/05/: main.py  part1.py  part2.py  test_part2.py
python/2023/day05/part2/: part2.py  test_part2.py
python/2023/day06/part1/: part1.py  test_part1.py
(+70 files in other folders)
