[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Peter Felber <effpeter@gmail.com>"]
license = "BSD"
#packages = [{include = "advent_of_code"}]
packages = []

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.23.5"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
