[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Peter Felber <effpeter@gmail.com>"]
license = "BSD"
#packages = [{include = "advent_of_code"}]
packages = []

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.23.5"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
    "day17",
    "day18",
    "day19",
    "day20",
    "day21",
    "day22",
    "day23",
    "day24",
    "day25",
]